--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 4.3
       script:
-        - test.sh
+        - ./test.sh
     - os: osx
       name: gradle 4.10
       install:
@@ -16,7 +16,7 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 4.10
       script:
-        - test.sh
+        - ./test.sh
     - os: osx
       name: gradle 5
       install:
@@ -24,7 +24,7 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 5.0
       script:
-        - test.sh
+        - ./test.sh
     - os: linux
       name: gradle 4.3
       sudo: required
@@ -34,7 +34,7 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 4.3
       script:
-        - test.sh
+        - ./test.sh
     - os: linux
       name: gradle 4.10
       sudo: required
@@ -44,7 +44,7 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 4.10
       script:
-        - test.sh
+        - ./test.sh
     - os: linux
       name: gradle 5
       sudo: required
@@ -54,4 +54,4 @@ matrix:
         - source ~/.bash_profile
         - sdk install gradle 5.0
       script:
-        - test.sh
+        - ./test.sh
